--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -504,7 +504,7 @@ CFPB:
     event: Jordan Wick is formally onboarded as a CFPB employee on March 5 (while remaining an employee of USDS). Prior to that, he was detailed to the CFPB from USDS.
     named:
     - Jordan Wick
-    source: hhttps://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
     agency: CFPB
   - date: 2025-03-21
     type: access_revoked
@@ -672,6 +672,7 @@ DOD:
   name: Department of Defense
   id: DOD
   associated:
+  - Luke Farritor
   - Justin Fulcher
   - Elon Musk
   events:
@@ -736,6 +737,17 @@ DOD:
     event: DOGE staff are reportedly examining Navy's enterprise software licenses under the direction of the DOD CIO
     source: https://defensescoop.com/2025/04/08/doge-reviewing-navy-software-enterprise/
     agency: DOD
+  - date: 2025-04-12
+    type: disruption
+    event: A DOGE engineer has apparently removed the ability of government agencies to post new grants to grants.gov and requiring them to all be sent to a new email address created this week for reviews
+    named:
+    - Luke Farritor
+    source: https://www.washingtonpost.com/politics/2025/04/11/doge-controls-federal-grant-postings/
+    agency:
+    - HHS
+    - DOI
+    - DOD
+    - NIH
   systems: {}
   cases: {}
 
@@ -743,6 +755,7 @@ DOI:
   name: Department of the Interior
   id: DOI
   associated:
+  - Luke Farritor
   - Tyler Hassen
   - Stephanie Holmes
   - Bryton Shang
@@ -800,6 +813,17 @@ DOI:
     - Katrine Trampe
     source: https://www.nytimes.com/2025/03/31/us/politics/doge-musk-federal-payroll.html
     agency: DOI
+  - date: 2025-04-12
+    type: disruption
+    event: A DOGE engineer has apparently removed the ability of government agencies to post new grants to grants.gov and requiring them to all be sent to a new email address created this week for reviews
+    named:
+    - Luke Farritor
+    source: https://www.washingtonpost.com/politics/2025/04/11/doge-controls-federal-grant-postings/
+    agency:
+    - HHS
+    - DOI
+    - DOD
+    - NIH
   systems:
     FPPS:
       name: Federal Personnel Payroll System
@@ -1380,6 +1404,7 @@ DHS:
   - James Burnham
   - Edward Coristine
   - Steve Davis
+  - Leland Dudek
   - Marko Elez
   - Antoine McCord
   - Kyle Schutt
@@ -1435,6 +1460,16 @@ DHS:
     case_no: 1:25-cv-00677
     agency:
     - Treasury
+    - IRS
+    - DHS
+    - ICE
+  - date: 2025-04-07
+    type: report
+    event: After some qualms about its legality, Leland Dudek signs two memos authorizing sharing data that would allow DHS and ICE to locate immigrants
+    source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
+    named:
+    - Leland Dudek
+    agency:
     - IRS
     - DHS
     - ICE
@@ -1674,6 +1709,7 @@ Education:
     type: onboarded
     detailed_from: GSA
     event: Edward Coristine is detailed from GSA to the Department of Education
+    comment: I don't know if I have a record of this detail
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
     named:
     - Edward Coristine
@@ -2312,6 +2348,14 @@ Treasury:
     - IRS
     - DHS
     - ICE
+  - date: 2025-04-12
+    type: legal
+    event: Judge Vargas rules in New York et al vs. Donald Trump that Ryan Wunderly should be granted access to Treasury systems
+    named:
+    - Ryan Wunderly
+    case_no: 1:25-cv-01144
+    source: https://storage.courtlistener.com/recap/gov.uscourts.nysd.636609/gov.uscourts.nysd.636609.139.0.pdf
+    agency: Treasury
   systems:
     ASAP:
       name: Automated Standard Access For Payments
@@ -2389,10 +2433,10 @@ Treasury:
       case_no: 1:25-cv-00684
       link: https://www.courtlistener.com/docket/69715653/democracy-forward-foundation-v-us-department-of-the-treasury/
       agency: Treasury
-    1:25-cv-01144-JAV:
+    1:25-cv-01144:
       name: New York et al v. Donald J. Trump (S.D.N.Y.)
       description: Nineteen state attorneys general sued President Donald Trump and Secretary of the Treasury Scott Bessent alleging that individuals affiliated with the Department of Government Efficiency ("DOGE") were granted unauthorized access to sensitive Treasury Department records in violation of the Administrative Procedure Act, the Privacy Act, and other ethics statutes.
-      case_no: 1:25-cv-01144-JAV
+      case_no: 1:25-cv-01144
       date_filed: 2025-02-07
       link: https://www.courtlistener.com/docket/69623558/state-of-new-york-v-donald-j-trump/
       agency: Treasury
@@ -3107,7 +3151,7 @@ HHS:
     access_type: read
     access_systems:
     - Grants.gov
-    event: Luke Farritor is granted admin read-write access to Grants.gov by the Assistant Secretary for Financial Resources (ASFR)
+    event: Luke Farritor is granted read-write access to Grants.gov by the Assistant Secretary for Financial Resources (ASFR)
     named:
     - Luke Farritor
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
@@ -3133,6 +3177,16 @@ HHS:
     named:
     - Elon Musk
     source: https://www.newsnationnow.com/cuomo-show/rfk-defends-hhs-job-cuts/
+    agency: HHS
+  - date: 2025-03-29
+    type: access_changed
+    access_type: admin
+    access_systems:
+    - Grants.gov
+    event: Luke Farritor is granted admin access to Grants.gov by the Assistant Secretary for Financial Resources (ASFR)
+    named:
+    - Luke Farritor
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
     agency: HHS
   - date: 2025-03-29
     type: access_revoked
@@ -3172,6 +3226,17 @@ HHS:
     - CDC
     - NIH
     - CMS
+  - date: 2025-04-12
+    type: disruption
+    event: A DOGE engineer has apparently removed the ability of government agencies to post new grants to grants.gov and requiring them to all be sent to a new email address created this week for reviews
+    named:
+    - Luke Farritor
+    source: https://www.washingtonpost.com/politics/2025/04/11/doge-controls-federal-grant-postings/
+    agency:
+    - HHS
+    - DOI
+    - DOD
+    - NIH
   systems:
     Grants.gov:
       name: Grants.gov
@@ -3341,6 +3406,7 @@ ICE:
   id: ICE
   parent_id: DHS
   associated:
+  - Leland Dudek
   - Marko Elez
   events:
   - date: 2025-04-07
@@ -3350,6 +3416,16 @@ ICE:
     case_no: 1:25-cv-00677
     agency:
     - Treasury
+    - IRS
+    - DHS
+    - ICE
+  - date: 2025-04-07
+    type: report
+    event: After some qualms about its legality, Leland Dudek signs two memos authorizing sharing data that would allow DHS and ICE to locate immigrants
+    source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
+    named:
+    - Leland Dudek
+    agency:
     - IRS
     - DHS
     - ICE
@@ -3470,6 +3546,7 @@ IRS:
   associated:
   - Baris Akis
   - Sam Corcos
+  - Leland Dudek
   - Gavin Kliger
   events:
   - date: 2025-02-13
@@ -3561,6 +3638,30 @@ IRS:
     - IRS
     - DHS
     - ICE
+  - date: 2025-04-07
+    type: report
+    event: After some qualms about its legality, Leland Dudek signs two memos authorizing sharing data that would allow DHS and ICE to locate immigrants
+    source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
+    named:
+    - Leland Dudek
+    agency:
+    - IRS
+    - DHS
+    - ICE
+  - date: 2025-04-08
+    type: report
+    event: A hackathon at IRS of DOGE engineers and some senior IRS developers kicks off to create a "Mega API." Reportedly, the company Palantir is also involved
+    source: https://www.wired.com/story/palantir-doge-irs-mega-api-data/
+    named:
+    - Sam Corcos
+    agency: IRS
+  - date: 2025-04-10
+    type: report
+    event: The hackathon to create a "Mega API" at the IRS concludes. DOGE engineers are reportedly confidenct they will be able to deploy it in 30 days.
+    source: https://www.wired.com/story/palantir-doge-irs-mega-api-data/
+    named:
+    - Sam Corcos
+    agency: IRS
   systems:
     IDRS:
       name: Integrated Data Retrieval System
@@ -3739,6 +3840,17 @@ NIH:
     event: HHS terminates a large number of staff at NIH in the name of cost savings and realignment, as the new head of NIH is sworn in
     source: https://www.nytimes.com/2025/04/01/us/politics/trump-federal-layoffs-health-food.html
     agency: NIH
+  - date: 2025-04-12
+    type: disruption
+    event: A DOGE engineer has apparently removed the ability of government agencies to post new grants to grants.gov and requiring them to all be sent to a new email address created this week for reviews
+    named:
+    - Luke Farritor
+    source: https://www.washingtonpost.com/politics/2025/04/11/doge-controls-federal-grant-postings/
+    agency:
+    - HHS
+    - DOI
+    - DOD
+    - NIH
   systems:
     NBS:
       name: NIH Business System
@@ -4923,7 +5035,27 @@ SSA:
     event: Aram Moghaddassi adds 6300 names of suspected immigrants to the "death master file" as a way of forcing them to "self-deport" by making it impossible to use financial products. It included 7 minors.
     named:
     - Aram Moghaddassi
+    - Scott Coulter
     source: https://www.nytimes.com/2025/04/10/us/politics/migrants-deport-social-security-doge.html
+    agency: SSA
+  - date: 2025-04-10
+    type: disruption
+    event: Greg Pearre, a senior career executive overseeing technologists at the SSA, is forced out of his office by security guards after clashing with CIO Scott Coulter and calling his plan to declare immigrants dead illegal and cruel
+    named:
+    - Scott Coulter
+    source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
+    agency: SSA
+  - date: 2025-04-10
+    type: report
+    event: 102 more names of living people are added to the Master Death File at SSA to destroy their ability to participate in socierty
+    named:
+    - Scott Coulter
+    source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
+    agency: SSA
+  - date: 2025-04-11
+    type: disruption
+    event: The Social Security Agency is reportedly shifting all its official communications exclusively to X
+    source: https://www.wired.com/story/social-security-administration-regional-office-elon-musk-x/
     agency: SSA
   systems:
     AFES:
@@ -5062,6 +5194,7 @@ USADF:
     - Ethan Shaotran
     - Jacob Altik
     - Nate Cavanaugh
+    detail_id: 20250220-gsa-usadf-ethan-shaotran
     case_no: 1:25-cv-00660
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.3.pdf
     agency: USADF
@@ -5070,6 +5203,7 @@ USADF:
     event: The MOU for DOGE's IT Modernization is between USADF and GSA and only covers the activities of Ethan Shaotran
     named:
     - Ethan Shaotran
+    detail_id: 20250220-gsa-usadf-ethan-shaotran
     case_no: 1:25-cv-00660
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.6.pdf
     agency: USADF
@@ -5080,6 +5214,7 @@ USADF:
     - Ethan Shaotran
     - Jacob Altik
     - Nate Cavanaugh
+    detail_id: 20250220-gsa-usadf-ethan-shaotran
     case_no: 1:25-cv-00660
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.3.pdf
     agency: USADF
@@ -5103,6 +5238,7 @@ USADF:
   - date: 2025-02-21
     type: report
     event: USADF general cousel revokes their participation in the MOU based on it being under false pretenses
+    detail_id: 20250220-gsa-usadf-ethan-shaotran
     case_no: 1:25-cv-00660
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.3.pdf
     agency: USADF
