--- a/it_modernization/events.yaml
+++ b/it_modernization/events.yaml
@@ -2,7 +2,7 @@
 meta:
   title: Events
   version: 1.0.0
-  generated: 2025-04-11
+  generated: 2025-04-12
 
 events:
 
@@ -442,7 +442,7 @@ events:
     max_people: 5
     reimbursed: false
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
-    file: 20250212-doge-education-all.pdf
+    file: mou-20250212-doge-education-all.pdf
 
 - date: 2025-01-28
   type: disruption
@@ -795,7 +795,7 @@ events:
     - ED-1
     comment: This is for a SGE position so it is not reimbursed and for a maximum of 135 days from start of SGE term
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
-    file: 20250212-opm-education-ed-1.pdf
+    file: mou-20250212-opm-education-ed-1.pdf
 
 - date: 2025-02-03
   type: onboarded
@@ -818,7 +818,7 @@ events:
     - ED-3
     comment: This is for a SGE position so it is not reimbursed and for a maximum of 135 days from start of SGE term
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
-    file: 20250212-gsa-education-ed-3.pdf
+    file: mou-20250212-gsa-education-ed-3.pdf
 
 - date: 2025-02-04
   type: report
@@ -1010,7 +1010,7 @@ events:
     max_people: 5
     reimbursed: false
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
-    file: 20250212-doge-education-all.pdf
+    file: mou-20250212-doge-education-all.pdf
 
 - date: 2025-02-05
   type: official
@@ -1521,7 +1521,7 @@ events:
     - ED-1
     comment: This is for a SGE position so it is not reimbursed and for a maximum of 135 days from start of SGE term
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
-    file: 20250212-opm-education-ed-1.pdf
+    file: mou-20250212-opm-education-ed-1.pdf
 
 - date: 2025-02-12
   type: official
@@ -1553,7 +1553,7 @@ events:
     - ED-3
     comment: This is for a SGE position so it is not reimbursed and for a maximum of 135 days from start of SGE term
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
-    file: 20250212-gsa-education-ed-3.pdf
+    file: mou-20250212-gsa-education-ed-3.pdf
 
 - date: 2025-02-13
   type: disruption
@@ -1904,7 +1904,7 @@ events:
     - SSA-3
     reimbursement_amount: $71,000 per quarter
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250222-dol-ssa-employee-3.pdf
+    file: mou-20250222-dol-ssa-employee-3.pdf
 
 - date: 2025-02-18
   type: onboarded
@@ -1928,7 +1928,7 @@ events:
     reimbursed: true
     comment: They took over an existing USDS MOU to make it be more DOGE-specific. Amy Gleason signed this one though
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250220-usds-ssa-modification.pdf
+    file: mou-20250220-usds-ssa-modification.pdf
 
 - date: 2025-02-18
   type: onboarded
@@ -1956,7 +1956,7 @@ events:
     - SSA-2
     reimbursement_amount: Up to $120,579
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250306-nasa-ssa-employee-2.pdf
+    file: mou-20250306-nasa-ssa-employee-2.pdf
 
 - date: 2025-02-18
   type: report
@@ -1986,7 +1986,7 @@ events:
     - SSA-3
     reimbursement_amount: $71,000 per quarter
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250222-dol-ssa-employee-3.pdf
+    file: mou-20250222-dol-ssa-employee-3.pdf
 
 - date: 2025-02-18
   type: onboarded
@@ -2010,7 +2010,7 @@ events:
     - SSA-2
     reimbursement_amount: Up to $120,579
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250306-nasa-ssa-employee-2.pdf
+    file: mou-20250306-nasa-ssa-employee-2.pdf
 
 - date: 2025-02-18
   type: onboarded
@@ -2100,7 +2100,7 @@ events:
     - SSA-10
     comment: For a SGE, so no payment needed
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250218-gsa-ssa-employee-10.pdf
+    file: mou-20250218-gsa-ssa-employee-10.pdf
 
 - date: 2025-02-19
   type: report
@@ -2241,12 +2241,13 @@ events:
     max_people: 5
     reimbursed: false
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
-    file: 20250212-doge-education-all.pdf
+    file: mou-20250212-doge-education-all.pdf
 
 - date: 2025-02-20
   type: onboarded
   detailed_from: GSA
   event: Edward Coristine is detailed from GSA to the Department of Education
+  comment: I don't know if I have a record of this detail
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
   named:
   - Edward Coristine
@@ -2275,7 +2276,7 @@ events:
     reimbursed: true
     comment: They took over an existing USDS MOU to make it be more DOGE-specific. Amy Gleason signed this one though
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250220-usds-ssa-modification.pdf
+    file: mou-20250220-usds-ssa-modification.pdf
 
 - date: 2025-02-21
   type: official
@@ -2302,6 +2303,7 @@ events:
   - Ethan Shaotran
   - Jacob Altik
   - Nate Cavanaugh
+  detail_id: 20250220-gsa-usadf-ethan-shaotran
   case_no: 1:25-cv-00660
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.3.pdf
   agency: USADF
@@ -2314,12 +2316,25 @@ events:
     agency:
     - DOGE
     - USADF
+  detail_info:
+    id: 20250220-gsa-usadf-ethan-shaotran
+    from: GSA
+    to: USADF
+    named:
+    - Ethan Shaotran
+    reimbursed: false
+    start_date: 2025-02-20
+    end_date: 2026-07-04
+    signed_date: 2025-02-21
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.20.7.pdf
+    file: mou-20250220-gsa-usadf-ethan-shaotran.pdf
 
 - date: 2025-02-21
   type: legal
   event: The MOU for DOGE's IT Modernization is between USADF and GSA and only covers the activities of Ethan Shaotran
   named:
   - Ethan Shaotran
+  detail_id: 20250220-gsa-usadf-ethan-shaotran
   case_no: 1:25-cv-00660
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.6.pdf
   agency: USADF
@@ -2332,6 +2347,18 @@ events:
     agency:
     - DOGE
     - USADF
+  detail_info:
+    id: 20250220-gsa-usadf-ethan-shaotran
+    from: GSA
+    to: USADF
+    named:
+    - Ethan Shaotran
+    reimbursed: false
+    start_date: 2025-02-20
+    end_date: 2026-07-04
+    signed_date: 2025-02-21
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.20.7.pdf
+    file: mou-20250220-gsa-usadf-ethan-shaotran.pdf
 
 - date: 2025-02-21
   type: report
@@ -2340,6 +2367,7 @@ events:
   - Ethan Shaotran
   - Jacob Altik
   - Nate Cavanaugh
+  detail_id: 20250220-gsa-usadf-ethan-shaotran
   case_no: 1:25-cv-00660
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.3.pdf
   agency: USADF
@@ -2352,6 +2380,18 @@ events:
     agency:
     - DOGE
     - USADF
+  detail_info:
+    id: 20250220-gsa-usadf-ethan-shaotran
+    from: GSA
+    to: USADF
+    named:
+    - Ethan Shaotran
+    reimbursed: false
+    start_date: 2025-02-20
+    end_date: 2026-07-04
+    signed_date: 2025-02-21
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.20.7.pdf
+    file: mou-20250220-gsa-usadf-ethan-shaotran.pdf
 
 - date: 2025-02-21
   type: report
@@ -2393,6 +2433,7 @@ events:
 - date: 2025-02-21
   type: report
   event: USADF general cousel revokes their participation in the MOU based on it being under false pretenses
+  detail_id: 20250220-gsa-usadf-ethan-shaotran
   case_no: 1:25-cv-00660
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.3.pdf
   agency: USADF
@@ -2405,6 +2446,18 @@ events:
     agency:
     - DOGE
     - USADF
+  detail_info:
+    id: 20250220-gsa-usadf-ethan-shaotran
+    from: GSA
+    to: USADF
+    named:
+    - Ethan Shaotran
+    reimbursed: false
+    start_date: 2025-02-20
+    end_date: 2026-07-04
+    signed_date: 2025-02-21
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.20.7.pdf
+    file: mou-20250220-gsa-usadf-ethan-shaotran.pdf
 
 - date: 2025-02-23
   type: disruption
@@ -2740,7 +2793,7 @@ events:
     - SSA-8
     comment: For a SGE, so no payment needed
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250226-opm-ssa-employee-8.pdf
+    file: mou-20250226-opm-ssa-employee-8.pdf
 
 - date: 2025-02-27
   type: legal
@@ -3165,7 +3218,7 @@ events:
   event: Jordan Wick is formally onboarded as a CFPB employee on March 5 (while remaining an employee of USDS). Prior to that, he was detailed to the CFPB from USDS.
   named:
   - Jordan Wick
-  source: hhttps://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
   agency: CFPB
 
 - date: 2025-03-05
@@ -3245,7 +3298,7 @@ events:
     reimbursed: true
     reimbursement_amount: $71,000 per quarter
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250317-dol-ssa-employee-7.pdf
+    file: mou-20250317-dol-ssa-employee-7.pdf
 
 - date: 2025-03-05
   type: report
@@ -3312,7 +3365,7 @@ events:
     reimbursed: true
     reimbursement_amount: $71,000 per quarter
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250317-dol-ssa-employee-7.pdf
+    file: mou-20250317-dol-ssa-employee-7.pdf
 
 - date: 2025-03-05
   type: onboarded
@@ -3336,7 +3389,7 @@ events:
     reimbursed: true
     reimbursement_amount: $71,000 per quarter
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250317-dol-ssa-employee-7.pdf
+    file: mou-20250317-dol-ssa-employee-7.pdf
 
 - date: 2025-03-06
   type: disruption
@@ -3405,7 +3458,7 @@ events:
     start_date: 2025-03-07
     end_date: 2025-06-15
     signed_date: 2025-03-12
-    file: 20250312-gsa-usps-alex-simonpour.pdf
+    file: mou-20250312-gsa-usps-alex-simonpour.pdf
 
 - date: 2025-03-08
   type: disruption
@@ -3895,7 +3948,7 @@ events:
     reimbursed: true
     reimbursement_amount: $71,000 per quarter
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250317-dol-ssa-employee-7.pdf
+    file: mou-20250317-dol-ssa-employee-7.pdf
 
 - date: 2025-03-18
   type: official
@@ -4264,7 +4317,7 @@ events:
   access_type: read
   access_systems:
   - Grants.gov
-  event: Luke Farritor is granted admin read-write access to Grants.gov by the Assistant Secretary for Financial Resources (ASFR)
+  event: Luke Farritor is granted read-write access to Grants.gov by the Assistant Secretary for Financial Resources (ASFR)
   named:
   - Luke Farritor
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
@@ -4644,6 +4697,17 @@ events:
   agency: SSA
 
 - date: 2025-03-29
+  type: access_changed
+  access_type: admin
+  access_systems:
+  - Grants.gov
+  event: Luke Farritor is granted admin access to Grants.gov by the Assistant Secretary for Financial Resources (ASFR)
+  named:
+  - Luke Farritor
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
+  agency: HHS
+
+- date: 2025-03-29
   type: report
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
   event: In a legal filing, the DOJ identifies 4 DOGE staffers - Edward Coristine, Marko Elez, Luke Farritor and Amy Gleason - at CMS
@@ -4946,6 +5010,17 @@ events:
   agency: CMS
   source: https://www.wired.com/story/dr-oz-ai-health-care-medicare-cms-town-hall/
 
+- date: 2025-04-07
+  type: report
+  event: After some qualms about its legality, Leland Dudek signs two memos authorizing sharing data that would allow DHS and ICE to locate immigrants
+  source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
+  named:
+  - Leland Dudek
+  agency:
+  - IRS
+  - DHS
+  - ICE
+
 - date: 2025-04-08
   type: report
   event: Employees at the EPA are reportedly being told by Trump-appointed officials that DOGE was using AI to monitor communication tools (including Microsoft Teams) for anti-Trump or anti-Musk language
@@ -4969,8 +5044,17 @@ events:
   event: Aram Moghaddassi adds 6300 names of suspected immigrants to the "death master file" as a way of forcing them to "self-deport" by making it impossible to use financial products. It included 7 minors.
   named:
   - Aram Moghaddassi
+  - Scott Coulter
   source: https://www.nytimes.com/2025/04/10/us/politics/migrants-deport-social-security-doge.html
   agency: SSA
+
+- date: 2025-04-08
+  type: report
+  event: A hackathon at IRS of DOGE engineers and some senior IRS developers kicks off to create a "Mega API." Reportedly, the company Palantir is also involved
+  source: https://www.wired.com/story/palantir-doge-irs-mega-api-data/
+  named:
+  - Sam Corcos
+  agency: IRS
 
 - date: 2025-04-10
   type: report
@@ -4981,3 +5065,61 @@ events:
   - Anthony Armstrong
   source: https://www.thehandbasket.co/p/doge-fdic
   agency: FDIC
+
+- date: 2025-04-10
+  type: report
+  event: The hackathon to create a "Mega API" at the IRS concludes. DOGE engineers are reportedly confidenct they will be able to deploy it in 30 days.
+  source: https://www.wired.com/story/palantir-doge-irs-mega-api-data/
+  named:
+  - Sam Corcos
+  agency: IRS
+
+- date: 2025-04-10
+  type: disruption
+  event: Greg Pearre, a senior career executive overseeing technologists at the SSA, is forced out of his office by security guards after clashing with CIO Scott Coulter and calling his plan to declare immigrants dead illegal and cruel
+  named:
+  - Scott Coulter
+  source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
+  agency: SSA
+
+- date: 2025-04-10
+  type: report
+  event: 102 more names of living people are added to the Master Death File at SSA to destroy their ability to participate in socierty
+  named:
+  - Scott Coulter
+  source: https://www.washingtonpost.com/politics/2025/04/12/trump-immigrants-dead-social-security/
+  agency: SSA
+
+- date: 2025-04-11
+  type: disruption
+  event: The Social Security Agency is reportedly shifting all its official communications exclusively to X
+  source: https://www.wired.com/story/social-security-administration-regional-office-elon-musk-x/
+  agency: SSA
+
+- date: 2025-04-12
+  type: disruption
+  event: A DOGE engineer has apparently removed the ability of government agencies to post new grants to grants.gov and requiring them to all be sent to a new email address created this week for reviews
+  named:
+  - Luke Farritor
+  source: https://www.washingtonpost.com/politics/2025/04/11/doge-controls-federal-grant-postings/
+  agency:
+  - HHS
+  - DOI
+  - DOD
+  - NIH
+
+- date: 2025-04-12
+  type: legal
+  event: Judge Vargas rules in New York et al vs. Donald Trump that Ryan Wunderly should be granted access to Treasury systems
+  named:
+  - Ryan Wunderly
+  case_no: 1:25-cv-01144
+  source: https://storage.courtlistener.com/recap/gov.uscourts.nysd.636609/gov.uscourts.nysd.636609.139.0.pdf
+  agency: Treasury
+  case_info:
+    name: New York et al v. Donald J. Trump (S.D.N.Y.)
+    description: Nineteen state attorneys general sued President Donald Trump and Secretary of the Treasury Scott Bessent alleging that individuals affiliated with the Department of Government Efficiency ("DOGE") were granted unauthorized access to sensitive Treasury Department records in violation of the Administrative Procedure Act, the Privacy Act, and other ethics statutes.
+    case_no: 1:25-cv-01144
+    date_filed: 2025-02-07
+    link: https://www.courtlistener.com/docket/69623558/state-of-new-york-v-donald-j-trump/
+    agency: Treasury
