--- a/it_modernization/raw_data/onboard_docs.yaml
+++ b/it_modernization/raw_data/onboard_docs.yaml
@@ -86,6 +86,15 @@
   salary: $84601
   file: onboard-treasury-marko-elez
 
+- id: onboard-education-employee-2
+  type: appointment
+  named_alias: ED-2
+  grade: GS15/6
+  start_date: 2025-01-31
+  agency: Education
+  salary: $195200
+  file: onboard-education-employee-2
+
 - id: onboard-education-employee-4
   name: Brooks Morgan
   type: consultant
@@ -106,3 +115,30 @@
   agency: Treasury
   salary: $0
   file: onboard-treasury-thomas-krause.pdf
+
+- id: onboard-hhs-amy-gleason
+  name: Amy Gleason
+  type: appointed
+  title: Expert/Consultant
+  start_date: 2025-03-04
+  file: onboard-hhs-amy-gleason.pdf
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.65.1_1.pdf
+  agency: hhs
+
+- id: onboard-cfpb-jordan-wick
+  name: Jordan Wick
+  type: appointed
+  title: Expert/Consultant
+  start_date: 2025-03-05
+  file: onboard-cfpb-jordan-wick.pdf
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.65.2.pdf
+  agency: cfpb
+
+- id: onboard-hhs-brad-smith
+  name: Brad Smith
+  type: appointed
+  title: Senior Advisor
+  start_date: 2025-03-05
+  file: onboard-hhs-brad-smith.pdf
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.65.3.pdf
+  agency: hhs
