--- a/it_modernization/aliases.yaml
+++ b/it_modernization/aliases.yaml
@@ -11,6 +11,8 @@ aliases:
 
 - id: OPM-2
   agency: OPM
+  evidence:
+  - Onboarded on 2025-01-20 as a volunteer SGE
   events:
   - date: 2025-01-20
     type: onboarded
@@ -90,6 +92,8 @@ aliases:
 
 - id: OPM-4
   agency: OPM
+  evidence:
+  - Onboarded on 2025-01-24 as a volunteer SGE with the title Expert
   events:
   - date: 2025-01-24
     type: onboarded
@@ -102,6 +106,11 @@ aliases:
 
 - id: OPM-5
   agency: OPM
+  evidence:
+  - Onboarded on 2025-01-20 as a provisional appt not to exceed 2025-05-20
+  - Senior Advisor to the Director for IT
+  - GS-15/10 with pay of $195,200
+  - Converted to an excepted appointment on 2025-02-18
   events:
   - date: 2025-01-20
     type: onboarded
@@ -122,6 +131,8 @@ aliases:
 
 - id: OPM-6
   agency: OPM
+  evidence:
+  - Onboarded on 2025-01-24 as a vounteer SGE with a term not to exceed 2025-07-22
   events:
   - date: 2025-01-24
     type: onboarded
