--- a/it_modernization/events.yaml
+++ b/it_modernization/events.yaml
@@ -2,7 +2,7 @@
 meta:
   title: Events
   version: 1.0.0
-  generated: 2025-04-12
+  generated: 2025-04-14
 
 events:
 
@@ -5505,6 +5505,14 @@ events:
   event: The Social Security Agency is reportedly shifting all its official communications exclusively to X
   source: https://www.wired.com/story/social-security-administration-regional-office-elon-musk-x/
   agency: SSA
+
+- date: 2025-04-11~
+  type: offboarded
+  event: Pete Marocco is reportedly fired from the State Department
+  named:
+  - Peter Marocco
+  source: https://www.wsj.com/politics/policy/trump-official-who-oversaw-closure-of-usaid-has-left-state-department-5760da3d?st=59hf4K
+  agency: State
 
 - date: 2025-04-12
   type: disruption
