--- a/it_modernization/raw_data/aliases.yaml
+++ b/it_modernization/raw_data/aliases.yaml
@@ -6,6 +6,7 @@
   agency: OPM
   evidence:
   - Onboarded on 2025-01-20 as a volunteer SGE
+  - This is likely one of the other young DOGE crew like Jordan Wick or Luke Farritor, etc.
 
 - id: OPM-3
   agency: OPM
@@ -32,6 +33,7 @@
   agency: OPM
   evidence:
   - Onboarded on 2025-01-24 as a vounteer SGE with a term not to exceed 2025-07-22
+  - This is likely one of the other young DOGE crew like Jordan Wick or Luke Farritor, etc.
 
 - id: ED-1
   agency: Education
@@ -72,7 +74,7 @@
   - Appointment is as Expert with a salary of $90K
   - Doing analysis of SSA payment data as focus
   - Software engineer with 5 years of experience and some leadership experience
-  - Most of the DOGE SGEs mapped to SSA are too young for this (Ed Coristine, Akash Bobba, Ethan Shaotran), but Cole Killian possibly
+  - Most of the DOGE SGEs mapped to SSA are too young for this (Ed Coristine, Akash Bobba , Ethan Shaotran), but Cole Killian possibly
   - It also would match Gavin Kliger, but he hasn't been linked to SSA
 
 - id: SSA-2
